--- a/servergames/ServerGames/.classpath
+++ b/servergames/ServerGames/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/Tyler_2/Desktop/back ups/client 2/craftbukkit-1.5.2-R0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/callum/Desktop/Others/Minecraft/craftbukkit.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
