I have tested it several times, it all works but there are an un needed trail of blocks behind which i cant figure out an easy way to clean up so if you dont mind taking a look. I made the pads 3 x 3 and there are a total of 9 pads
Signed-off-by: callum <callumt47@hotmail.co.uk>

--- a/servergames/ServerGames/plugin.yml
+++ b/servergames/ServerGames/plugin.yml
@@ -1,7 +1,7 @@
 main: com.server.games.main
 name: ServerGames
 version: 0.0.1
-authers: [callum2904, tyler_long_sim]
+auther: callum2904
 commands:
     Hex:
         description: Main Server Command!
