--- a/servergames/ServerGames/plugin.yml
+++ b/servergames/ServerGames/plugin.yml
@@ -1,7 +1,7 @@
 main: com.server.games.main
-name: ServerGames
+name: PadS
 version: 0.0.1
-auther: callum2904
+author: callum2904, tyler_long_sim
 commands:
     Hex:
         description: Main Server Command!
