--- a/servergames/ServerGames/.classpath
+++ b/servergames/ServerGames/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="C:/Users/Tyler_2/Desktop/back ups/client 2/craftbukkit-1.5.2-R0.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tyler_2/Desktop/AreaAPI.jar"/>
 	<classpathentry kind="lib" path="C:/Users/callum/Desktop/Others/Minecraft/craftbukkit.jar"/>
+	<classpathentry kind="lib" path="C:/Users/callum/Desktop/AreaAPI.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
